--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
           <span class="hero-subtitle wow animate__animated animate__fadeInRight"
             data-wow-delay="0.2s">Web-developer</span>
           <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Olga Eidelman</h1>
-          <p class="hero-description wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
-            Разрабатываю сайты для малого и среднего бизнеса. У меня можно заказать дизайн и верстку небольшого сайта
-            или
-            интернет-магазина
-            Бесплатная консультация</p>
-          <button class="button hero-button wow animate__animated animate__fadeInRight" data-wow-delay="0.8s">Бесплатная
-            консультация</button>
+          <h2 class="wow animate__animated animate__fadeInRight">My skills:</h2>
+          <ul class="hero-description wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
+             <li>Programming languages - JavaScript, TypeScript.</li>
+             <li>Languages,libraries and frameworks for building web site - HTML, CSS, Bootstrap, Flexbox, jQuery, ReactJS, React hooks, Redux.</li>
+             <li>Git.</li>
+             <li>Figma.</li>
+          </ul>
+          <button class="button hero-button wow animate__animated animate__fadeInRight" data-wow-delay="0.8s">Contact me</button>
         </div>
         <div class="hero-avatar wow animate__animated animate__fadeIn" data-wow-delay="1.5s">
 
@@ -103,67 +104,25 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide projects-slide">
-              <img src="img/project-img.png" alt="" class="project-image">
+              <img src="img/willberies.png" alt="" class="project-image">
               <div class="project-text">
-                <h3 class="project-title">Сайт строительной фирмы "Велстрой"</h3>
+                <h3 class="project-title">Clothing store online</h3>
                 <div class="project-time">
-                  <img src="img/time-icon.png" alt="" class="project-icon">
                   <div class="project-description">
-                    <h4 class="project-subtitle">Time</h4>
-                    <p class="project-paragraph">4 working days</p>
-                  </div>
-                </div>
-                <div class="project-cost">
-                  <img src="img/cost-icon.png" alt="" class="project-icon">
-                  <div class="project-description">
-                    <h4 class="project-subtitle">Cost</h4>
-                    <p class="project-paragraph">14000 rub</p>
-                  </div>
-                </div>
-                <div class="project-feedback">
-                  <img src="img/feedback-icon.png" alt="" class="project-icon">
-                  <div class="project-description">
-                    <h4 class="project-subtitle">Feedback</h4>
-                    <p class="project-paragraph ">Мне понравилось работать с Артемом, потому что он все время был на
-                      связи и
-                      предлагал свои решения, когда мы заходили в
-                      тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Артем — тот редкий
-                      фрилансер, у
-                      которого с
-                      документами все в порядке</p>
+                    <h4 class="project-subtitle">Link:</h4>
+                    <a href="https://github.com/wildberries-project/wildberries-project">click here</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="swiper-slide projects-slide">
-              <img src="img/project-img.png" alt="" class="project-image">
+              <img src="img/hiDucation.png" alt="" class="project-image">
               <div class="project-text">
-                <h3 class="project-title">Сайт строительной фирмы "Белкамнефть"</h3>
+                <h3 class="project-title">Educational platform</h3>
                 <div class="project-time">
-                  <img src="img/time-icon.png" alt="" class="project-icon">
                   <div class="project-description">
-                    <h4 class="project-subtitle">Time</h4>
-                    <p class="project-paragraph">4 working days</p>
-                  </div>
-                </div>
-                <div class="project-cost">
-                  <img src="img/cost-icon.png" alt="" class="project-icon">
-                  <div class="project-description">
-                    <h4 class="project-subtitle">Cost</h4>
-                    <p class="project-paragraph">14000 rub</p>
-                  </div>
-                </div>
-                <div class="project-feedback">
-                  <img src="img/feedback-icon.png" alt="" class="project-icon">
-                  <div class="project-description">
-                    <h4 class="project-subtitle">Feedback</h4>
-                    <p class="project-paragraph ">Мне понравилось работать с Артемом, потому что он все время был на
-                      связи и
-                      предлагал свои решения, когда мы заходили в
-                      тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Артем — тот редкий
-                      фрилансер, у
-                      которого с
-                      документами все в порядке</p>
+                    <h4 class="project-subtitle">Link:</h4>
+                    <a href="https://github.com/OlyaMoss/himath_gaming" class="project-link">click here</a>
                   </div>
                 </div>
               </div>
@@ -171,14 +130,10 @@
             </div>
 
           </div>
-          <!-- If we need pagination -->
           <div class="projects-pagination"></div>
-
         </div>
-
     </section>
   </main>
-
   <footer class="section">
     <div class="container">
       <h2 class="contacts-title">Contact me</h2>
@@ -193,11 +148,11 @@
           <div class="contacts-data">
             <div class="contacts-phone">
               <h4 class="contacts-title">Phone</h4>
-              <a href="tel: +7 999 123-45-67" class="contacts-link">+79991234567</a>
+              <a href="tel: +9 725 463-68-289" class="contacts-link">+972546368289</a>
             </div>
             <div class="contacts-mail">
               <h4 class="contacts-title">Email</h4>
-              <a href="mailto:mail@mail.ru" class="contacts-link">mail@mail.ru</a>
+              <a href="mailto:mail@mail.ru" class="contacts-link">olya451208@gmail.com</a>
             </div>
             <div class="contacts-social">
               <h4 class="contacts-title">Social</h4>
@@ -222,7 +177,7 @@
   <script src="js/wow.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
-
+  <script src="js/script.js"></script>
 
 </body>
 
