--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-
+  <script src="js/wow.min.js" defer></script>
+  <script src="js/swiper-bundle.min.js" defer></script>
+  <script src="js/main.js" defer></script>
+  <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -34,71 +34,23 @@
           <span class="hero-subtitle wow animate__animated animate__fadeInRight"
             data-wow-delay="0.2s">Web-developer</span>
           <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Olga Eidelman</h1>
-          <h2 class="wow animate__animated animate__fadeInRight">My skills:</h2>
-          <ul class="hero-description wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
+          <h2 class="hero-skills wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">My skills:</h2>
+          <ul class="hero-description wow animate__animated animate__fadeInRight" data-wow-delay="0.8s">
              <li>Programming languages - JavaScript, TypeScript.</li>
-             <li>Languages,libraries and frameworks for building web site - HTML, CSS, Bootstrap, Flexbox, jQuery, ReactJS, React hooks, Redux.</li>
+             <li>Languages,libraries and frameworks for building web site - HTML, CSS, Bootstrap,
+               Flexbox, jQuery, ReactJS,Redux.</li>
              <li>Git.</li>
              <li>Figma.</li>
           </ul>
-          <button class="button hero-button wow animate__animated animate__fadeInRight" data-wow-delay="0.8s">Contact me</button>
         </div>
-        <div class="hero-avatar wow animate__animated animate__fadeIn" data-wow-delay="1.5s">
-
-        </div>
+        <div class="hero-avatar wow animate__animated animate__fadeIn" data-wow-delay="1.3s"></div>
       </div>
     </div>
-
-  </header>
-
-  <main>
-    <section class="features section">
+</header>
+    
+<section class="section projects">
       <div class="container">
-        <h2 class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.3s">Good to work with me</h2>
-        <div class="features-block">
-          <div class="features-item wow animate__animated animate__fadeIn" data-wow-delay="0.6s">
-            <img src="img/features/offer-img.png" alt="По договору" class="features-images">
-            <h3 class="features-title">По договору</h3>
-            <p class="features-text">В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу
-              неустойку.</p>
-          </div>
-          <div class="features-item wow animate__animated animate__fadeIn" data-wow-delay="0.6s">
-            <img src="img/features/deadline-img.png" alt="Точно в срок" class="features-images">
-            <h3 class="features-title">Точно в срок</h3>
-            <p class="features-text">В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу
-              неустойку.</p>
-          </div>
-          <div class="features-item wow animate__animated animate__fadeIn" data-wow-delay="0.6s">
-            <img src="img/features/agreement-img.png" alt="По договору" class="features-images">
-            <h3 class="features-title">По договору</h3>
-            <p class="features-text">В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу
-              неустойку.</p>
-          </div>
-          <div class="features-item wow animate__animated animate__fadeIn" data-wow-delay="1s">
-            <img src="img/features/conversation-img.png" alt="По договору" class="features-images">
-            <h3 class="features-title">По договору</h3>
-            <p class="features-text">В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу
-              неустойку.</p>
-          </div>
-          <div class="features-item wow animate__animated animate__fadeIn" data-wow-delay="1s">
-            <img src="img/features/storage-img.png" alt="По договору" class="features-images">
-            <h3 class="features-title">По договору</h3>
-            <p class="features-text">В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу
-              неустойку.</p>
-          </div>
-          <div class="features-item wow animate__animated animate__fadeIn" data-wow-delay="1s">
-            <img src="img/features/steps-img.png" alt="По договору" class="features-images">
-            <h3 class="features-title">По договору</h3>
-            <p class="features-text">В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу
-              неустойку.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section projects">
-      <div class="container">
-        <h2 class="section-title">Last projects</h2>
+        <h2 class="section-title ">Last projects</h2>
         <div class="swiper projects-slider">
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
@@ -110,10 +62,10 @@
                 <div class="project-time">
                   <div class="project-description">
                     <h4 class="project-subtitle">Link:</h4>
-                    <a href="https://github.com/wildberries-project/wildberries-project">click here</a>
+                    <a href="https://github.com/wildberries-project/wildberries-project" class="project-link">Clothing store</a>
                   </div>
                 </div>
-              </div>
+                </div>
             </div>
             <div class="swiper-slide projects-slide">
               <img src="img/hiDucation.png" alt="" class="project-image">
@@ -122,28 +74,35 @@
                 <div class="project-time">
                   <div class="project-description">
                     <h4 class="project-subtitle">Link:</h4>
-                    <a href="https://github.com/OlyaMoss/himath_gaming" class="project-link">click here</a>
+                    <a href="https://github.com/OlyaMoss/himath_gaming" class="project-link">Educational platform</a>
                   </div>
                 </div>
               </div>
 
             </div>
+              <div class="swiper-slide projects-slide">
+                <img src="img/twitter.png" alt="" class="project-image">
+                <div class="project-text">
+                  <h3 class="project-title">My twitter</h3>
+                  <div class="project-time">
+                    <div class="project-description">
+                      <h4 class="project-subtitle">Link:</h4>
+                      <a href="https://github.com/OlyaMoss/my-twitter" class="project-link">My twitter</a>
+                    </div>
+                  </div>
+                </div>
+              
+              </div>
 
           </div>
           <div class="projects-pagination"></div>
         </div>
     </section>
-  </main>
-  <footer class="section">
+
+  <footer class="section contacts">
     <div class="container">
       <h2 class="contacts-title">Contact me</h2>
       <div class="contacts-block">
-        <form action="#" class="contacts-form">
-          <h4 class="form-title">You can leave a request, I'll call you</h4>
-          <input type="text" class="input input-name" placeholder="Your name">
-          <input type="text" class="input input-phone" placeholder="Your phone">
-          <button class="form-button button">Consultation</button>
-        </form>
         <div class="contacts-text">
           <div class="contacts-data">
             <div class="contacts-phone">
@@ -154,12 +113,12 @@
               <h4 class="contacts-title">Email</h4>
               <a href="mailto:mail@mail.ru" class="contacts-link">olya451208@gmail.com</a>
             </div>
-            <div class="contacts-social">
+            <!-- <div class="contacts-social">
               <h4 class="contacts-title">Social</h4>
               <a href="#" class="contacts-link">t.me/ivanov</a>
               <a href="#" class="contacts-link">vk.me/ivanov</a>
               <a href="#" class="contacts-link">fb.me/ivanov</a>
-            </div>
+            </div> -->
           </div>
           <div class="social-links">
             <a href="" class="social-link"><img src="img\social\instagram.png" alt="Instagram"></a>
@@ -174,11 +133,6 @@
     </div>
   </footer>
 
-  <script src="js/wow.min.js"></script>
-  <script src="js/swiper-bundle.min.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/script.js"></script>
-
-</body>
+  </body>
 
 </html>
