--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="hero-content">
         <div class="hero-text">
           <span class="hero-subtitle wow animate__animated animate__fadeInRight"
-            data-wow-delay="0.2s">Web-developer</span>
+            data-wow-delay="0.2s">Junior software engineer</span>
           <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Olga Eidelman</h1>
           <h2 class="hero-skills wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">My skills:</h2>
           <ul class="hero-description wow animate__animated animate__fadeInRight" data-wow-delay="0.8s">
